--- a/work.html
+++ b/work.html
@@ -541,7 +541,7 @@ table img {
               <td>
                 <a class="nav-link" href="3D.html">
                   <div class="img-box">
-                    <img src="3D.webp" alt="">
+                    <img src="3d.webp" alt="">
                     <span class="img-text">3D Model</span>
                   </div>
                 </a>
@@ -603,4 +603,5 @@ table img {
   });
   </script>
 </body>
+
 </html>
