--- a/index.html
+++ b/index.html
@@ -637,11 +637,21 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
 }
 .board-pic {
   position: absolute;
-  inset: 0;
   width: 100%;
   height: 100%;
   object-fit: contain;
   z-index: 1;
+}
+@media (max-width: 768px) {
+  .w-board {
+    width: 90vw !important;             /* บนมือถือเต็มจอ */
+    max-width: none !important;         /* เพิ่มช่องว่างระหว่างไอเท็ม */
+  }
+  .board-pic {
+    height: 80%;
+    width: 140%;  
+    object-fit: fill;                  /* ปรับภาพให้เต็มบนมือถือ */
+  }
 }
 .work-category {
   position: relative;
@@ -652,6 +662,14 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
   grid-template-rows: 1fr 1fr !important;
   place-items: center !important;
   box-sizing: border-box !important;
+}
+@media (max-width: 768px) {
+  .work-category {
+    width: 80%;
+    grid-template-columns: 1fr 1fr !important;
+    grid-template-rows: auto auto auto auto !important; /* 4 แถว บนมือถือ */
+    gap: 15px !important; /* เพิ่มช่องว่างระหว่างไอเท็ม */
+  }
 }
 
 /* adjust image sizing inside each work-item (only size & position) */
