--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Cutie Verse</title>
   <link rel="icon" type="image/webp" href="logowebsticker.webp" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
   <!-- Custom styles -->
   <style>
     :root{
@@ -324,8 +325,7 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
   transition: transform 0.3s ease;
 }
 .container-sli {
-  width: 100%;
-  height: 30vh;               /* ความสูงเต็มหน้าจอ */
+  width: 100%;              /* ความสูงเต็มหน้าจอ */
   overflow: hidden;            /* ซ่อนส่วนที่เกิน */
   display:  flex;
   justify-content: center;     /* จัดกึ่งกลางแนวนอน */
@@ -359,7 +359,7 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
 }
 @media (max-width: 576px) {
   .container-sli {
-  display: none;         /* ลดความสูงบนมือถือจอเล็ก */
+       /* ลดความสูงบนมือถือจอเล็ก */
   }
 }
 
@@ -606,8 +606,7 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
   text-align: center;
   text-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
   z-index: 3;
-  line-height: 1.4;
-  pointer-events: none;            /* ไม่ให้ข้อความบังคลิกโลโก้ */
+  line-height: 1.4;          /* ไม่ให้ข้อความบังคลิกโลโก้ */
   /* ล็อกตายตัวเพิ่มเติม */
   margin: 0;
   padding: 0;
