--- a/art-detail3D.html
+++ b/art-detail3D.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Artwork Detail</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
     body {
       background: #191a1c;
@@ -238,8 +241,9 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
 
     /* โครงสร้างหน้า */
     .detail-wrapper {
-      max-width: 1150px;
+      max-width: 1400px;
       margin: 70px auto;
+      margin-top: 120px;
       display: flex;
       gap: 70px;
       padding: 10px 20px;
@@ -312,9 +316,10 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
       transform: scale(1.12);
       opacity: 0.95;
     }
+    
 
     /* มือถือ & แท็บเล็ต */
-    @media (max-width: 850px) {
+    @media (max-width: 768px) {
       .detail-wrapper {
         flex-direction: column;
         align-items: center;
@@ -355,6 +360,104 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
     width: 100%;
     margin-top: 0;
     }
+
+    /* ---------------------------------------
+   📌 3) Mobile (<= 767px)
+   ความละเอียดอ้างอิง: 360×640
+-----------------------------------------*/
+@media (max-width: 767px) {
+
+  .detail-wrapper {
+    flex-direction: column;
+    margin-top: 110px;
+    gap: 25px;
+    padding: 0 12px;
+  }
+
+  .left-box {
+    height: auto !important;      /* ⭐ ยกเลิก 620px */
+    padding: 0;
+    border-radius: 20px !important;
+    overflow: hidden !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left-box img {
+    width: 100%;
+    height: auto;
+    border-radius: 20px !important;
+    object-fit: cover;     /* ⭐ cover ชนขอบ → มนจริง */
+    max-height: none !important;
+  }
+
+  .detail-card {
+    width: 100%;
+    gap: 20px;
+  }
+
+  .detail-item {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px 20px;
+    font-size: 1rem;
+  }
+
+  .label {
+    width: 100%;
+    min-width: auto;   /* 📌 ป้องกันชื่อ Artwork หาย */
+    font-size: 1rem;
+    margin-bottom: 5px;
+  }
+
+  .mini-gallery {
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+  }
+
+  .mini-gallery img {
+    width: 70px;
+    height: 70px;
+  }
+
+  .breadcrumbs {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .navbar-toggler,
+  .navbar-collapse {
+    display: none !important;
+  }
+}
+
+/* =============================
+   ทำให้ footer ติดขอบล่างบน PC
+   ============================= */
+@media (min-width: 1024px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  .detail-wrapper {
+    flex: 1; /* ดัน footer ลงล่าง */
+  }
+
+  .footer {
+    margin-top: auto;
+  }
+}
+
+
+.footer-content { display: flex; flex-direction: column; align-items: center; gap: 10px; }
+.social-links a { color: #000; margin: 0 8px; font-size: 1.2rem; transition: transform 0.3s, color 0.3s; }
+.social-links a:hover { transform: scale(1.2); color: #ff66c4; }
+
 
   </style>
 </head>
@@ -405,7 +508,7 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
     <span>/</span>
     <a href="work.html">Work</a>
     <span>/</span>
-    <a href="photo.html">Photo</a>
+    <a href="3D.html">3D</a>
     <span>/</span>
     <a id="crumb-art" href="art-detailphoto.html">Artwork</a>
     </div>
@@ -435,12 +538,20 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
 
     </div>
   </div>
-  <footer class="footer">
+    <footer class="footer">
   <div class="footer-content">
     <p>© 2025 Cutie Verse </p>
+    <div class="social-links">
+      <a href="https://www.facebook.com/profile.php?id=61584217357667" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/cutieverse_website/" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.tiktok.com/@cutieverse_website" target="_blank"><i class="fab fa-tiktok"></i></a>
+    </div>
   </div>
+
+  
    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
   const params = new URLSearchParams(window.location.search);
 
