--- a/drawing.html
+++ b/drawing.html
@@ -7,6 +7,8 @@
   <title>Cutie Verse</title>
   <link rel="icon" type="image/webp" href="logowebsticker.webp" />
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Graphic</title>
@@ -440,14 +442,35 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
     opacity: 0.6;
 }
 .footer {
-    background: linear-gradient(to right, #b4f0ff, #e0c3fc, #fbc2eb);
-    color: #000;
-    padding: 20px 0;
-    text-align: center;
-    font-weight: 600;
-    width: 100%;
-    margin-top: 0;
-  }
+  background: linear-gradient(to right, #b4f0ff, #e0c3fc, #fbc2eb); /* ไล่สีพาสเทล */
+  color: #000;
+  padding: 20px 0;
+  text-align: center;
+  font-weight: 600;
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.social-links a {
+  color: #000;
+  margin: 0 8px;
+  font-size: 1.2rem;
+  transition: transform 0.3s, color 0.3s;
+}
+
+.social-links a:hover {
+  transform: scale(1.2);
+  color: #ff66c4;
+}
   </style>
 
   <!-- Custom dropdown/toggler logic (moved to after bootstrap) -->
@@ -580,12 +603,12 @@ a.logo-accent{ color: var(--c1); font-weight:700; }
   <div class="footer-content">
     <p>© 2025 Cutie Verse </p>
     <div class="social-links">
-   <a href="https://www.facebook.com/profile.php?id=61584217357667"><i class="fab fa-facebook"></i></a>
-   <a href="https://www.instagram.com/cutieverse_website?igsh=Mmo5emc0ZHJ0MzZ2"><i class="fab fa-instagram"></i></a>
-   <a href="https://www.tiktok.com/@cutieverse_website?_r=1&_t=ZS-91koZPf99CW"><i class="fab fa-tiktok"></i></a>
+   <a href="https://www.facebook.com/profile.php?id=61584217357667" target="_blank"><i class="fab fa-facebook"></i></a>
+   <a href="https://www.instagram.com/cutieverse_website?igsh=Mmo5emc0ZHJ0MzZ2" target="_blank"><i class="fab fa-instagram"></i></a>
+   <a href="https://www.tiktok.com/@cutieverse_website?_r=1&_t=ZS-91koZPf99CW" target="_blank"><i class="fab fa-tiktok"></i></a>
   </div>
   </div>
-   </footer>
+</footer>
  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
  <script>
 
