--- a/work.html
+++ b/work.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap" rel="stylesheet">
 
   <!-- Custom styles -->
   <style>:root{
@@ -291,6 +292,7 @@ table img {
     margin: 0 auto;           /* จัดภาพใน cell ให้กลาง */
     max-width: 100%;
 }
+
 .img-box {
     position: relative;
     display: inline-block;
@@ -352,6 +354,33 @@ table img {
     opacity: 0.6;
 }
 
+/* ปรับเฉพาะมือถือ (ความกว้างต่ำกว่า 480px) */
+@media (max-width: 480px) {
+
+  /* ลดขนาดฟอนต์ในกรอบทั้งหมดให้เท่ากัน */
+  .img-text {
+    font-size: 1.2rem !important;
+    line-height: 1.2 !important;
+    white-space: nowrap; /* กันไม่ให้ตัดบรรทัด */
+  }
+
+  /* ลด effect hover ไม่ให้ขยายฟอนต์เกินกล่อง */
+  .img-box:hover .img-text {
+    font-size: 1.4rem !important;
+  }
+
+  /* ปรับภาพให้มีสัดส่วนเท่ากัน เพื่อกันไม่ให้ช่อง 3D Model ดันลง */
+  .img-box img {
+    height: 150px;         /* กำหนดความสูงคงที่ */
+    width: 300px;         /* หรือจะใช้ 100% ก็ได้ */
+    object-fit: cover;    /* ครอบภาพให้พอดีกรอบ */
+  }
+
+  /* ปรับความกว้างของ cell ให้เท่ากัน */
+  table td {
+    padding: 10px !important;
+  }
+}
 
 </style>
 <script>
@@ -548,7 +577,8 @@ table img {
               </td>
             </tr>
             
-          </table></div>
+          </table>
+        </div>
   <!-- Bootstrap JS (bundle includes Popper) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
